# webscraping-scrapy-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: data.jsonl  mercadolivre.db
src/bot/: graphs.py  main_bot.py  schedule.py
src/dashboard/: app.py
src/mercadolivre/mercadolivre/: settings.py
src/mercadolivre/mercadolivre/spiders/: gopro.py  notebook.py
src/transform_load/: main.py
